Fix brush preview outlines being aligned based on incorrect bounding box.

The root cause of this bug is that the class `KisOptimizedBrushOutline` 
does not keep track of the original 'center' of the brush. It instead 
uses the center of the non-transparent pixels in the brush.

The patch just stores the bounds explicitly in `KisOptimizedBrushOutline`
to resolve this issue

BUG:477164